--- a/YoubarajPoudeldemo/build.gradle
+++ b/YoubarajPoudeldemo/build.gradle
@@ -10,7 +10,7 @@ android {
         targetSdk 31
         versionCode 1
         versionName "1.0"
-
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
     }
